--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.15",
     "pg": "^8.5.1"
